fixes in form id's

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -542,13 +542,13 @@ import gymClasses from "../mock/gym-classes.json";
               <div class="md:flex md:gap-4">
                 <div class="w-full">
                   <label
-                    for="email-address-icon"
+                    for="first-name"
                     class="block mb-2 text-sm font-medium text-gray-900"
                     >Your first name</label
                   >
                   <input
                     type="text"
-                    id="email-address-icon"
+                    id="first-name"
                     class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5"
                     placeholder="Name"
                     required
@@ -556,13 +556,13 @@ import gymClasses from "../mock/gym-classes.json";
                 </div>
                 <div class="w-full">
                   <label
-                    for="email-address-icon"
+                    for="last-name"
                     class="block mb-2 text-sm font-medium text-gray-900"
                     >Your last name</label
                   >
                   <input
                     type="text"
-                    id="email-address-icon"
+                    id="last-name"
                     class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5"
                     placeholder="Last name"
                     required
@@ -570,13 +570,13 @@ import gymClasses from "../mock/gym-classes.json";
                 </div>
               </div>
               <label
-                for="email-address-icon"
+                for="email"
                 class="block mb-2 text-sm font-medium text-gray-900"
                 >Your Email</label
               >
               <input
                 type="text"
-                id="email-address-icon"
+                id="email"
                 class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5"
                 placeholder="name@example.com"
                 required
