--- a/src/pages/inscription.astro
+++ b/src/pages/inscription.astro
@@ -62,7 +62,7 @@ let month = months[date.getMonth() + 1];
                 </div>
               </div>
               <label
-                for="email-address "
+                for="email-address"
                 class="block mb-2 text-base font-medium text-gray-900"
                 >Email</label
               >
@@ -135,12 +135,13 @@ let month = months[date.getMonth() + 1];
 
           <div id="enterprise-name" class="w-full hidden">
             <label
-              for="enterprise-name"
+              for="company-name"
               class="block mb-2 font-medium text-base text-gray-900"
               >Your Enterprise*</label
             >
             <input
               type="text"
+              id="company-name"
               class="bg-gray-50 mb-4 border border-gray-300 text-base text-gray-900 rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5"
               placeholder="Enterprise name"
               required
