--- a/src/layouts/InscriptionLayout.astro
+++ b/src/layouts/InscriptionLayout.astro
@@ -6,15 +6,16 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Inscription</title>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-			rel="stylesheet"
+			rel="preload"
+			href="/fonts/Lexend.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin="anonymous"
 		/>
+		<title>Inscription</title>
 	</head>
-	<body style="font-family: Poppins, sans-serif;">
+	<body style="font-family: lexend;">
 		<section class="px-12 py-6 bg-[#1e1e2c] w-screen fixed top-0 lg:py-8">
 			<div class="text-white max-w-7xl m-auto flex justify-between">
 				<a href="/">
@@ -47,3 +48,10 @@
 	</body>
 	<script src="../../node_modules/flowbite/dist/flowbite.min.js"></script>
 </html>
+
+<style is:global>
+	@font-face {
+		font-family: "Lexend";
+		src: url("fonts/LexendMega-VariableFont_wght.woff2") format("woff2");
+	}
+</style>
