--- a/src/layouts/InscriptionLayout.astro
+++ b/src/layouts/InscriptionLayout.astro
@@ -52,6 +52,6 @@
 <style is:global>
 	@font-face {
 		font-family: "Lexend";
-		src: url("fonts/LexendMega-VariableFont_wght.woff2") format("woff2");
+		src: url("fonts/Lexend.woff2") format("woff2");
 	}
 </style>
