--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,16 +1,13 @@
 <footer class="bg-[#04040C]">
   <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-    <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+    <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
     <div class="flex items-center justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+      <span class="text-sm text-gray-500 sm:text-center"
         >© 2023 <a href="https://flowbite.com/" class="hover:underline">MyGym</a
         >. All Rights Reserved.
       </span>
       <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
-        <a
-          href="#"
-          class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
-        >
+        <a href="#" class="text-gray-500 hover:text-gray-900">
           <svg
             class="w-5 h-5"
             fill="currentColor"
@@ -23,10 +20,7 @@
           >
           <span class="sr-only">Facebook page</span>
         </a>
-        <a
-          href="#"
-          class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
-        >
+        <a href="#" class="text-gray-500 hover:text-gray-900">
           <svg
             class="w-5 h-5"
             fill="currentColor"
