font-medium removed

--- a/src/pages/inscription.astro
+++ b/src/pages/inscription.astro
@@ -35,8 +35,7 @@ let month = months[date.getMonth() + 1];
                 <div class="w-full">
                   <label
                     for="first-name"
-                    class="block mb-2 text-base font-medium text-gray-900"
-                    >First name</label
+                    class="block mb-2 text-base text-gray-900">First name</label
                   >
                   <input
                     type="text"
@@ -49,8 +48,7 @@ let month = months[date.getMonth() + 1];
                 <div class="w-full">
                   <label
                     for="last-name"
-                    class="block mb-2 text-base font-medium text-gray-900"
-                    >Last name</label
+                    class="block mb-2 text-base text-gray-900">Last name</label
                   >
                   <input
                     type="text"
@@ -63,8 +61,7 @@ let month = months[date.getMonth() + 1];
               </div>
               <label
                 for="email-address"
-                class="block mb-2 text-base font-medium text-gray-900"
-                >Email</label
+                class="block mb-2 text-base text-gray-900">Email</label
               >
               <input
                 type="text"
@@ -73,9 +70,7 @@ let month = months[date.getMonth() + 1];
                 placeholder="name@example.com"
                 required
               />
-              <label
-                for="address"
-                class="block mb-2 text-base font-medium text-gray-900"
+              <label for="address" class="block mb-2 text-base text-gray-900"
                 >Address</label
               >
               <input
@@ -93,7 +88,7 @@ let month = months[date.getMonth() + 1];
             Choose your plan
           </h3>
           <ul
-            class="items-center w-full text-base font-medium mb-4 text-gray-900 bg-white border border-gray-200 rounded-lg sm:flex"
+            class="items-center w-full text-base mb-4 text-gray-900 bg-white border border-gray-200 rounded-lg sm:flex"
           >
             <li
               class="w-full border-b border-gray-200 sm:border-b-0 sm:border-r"
@@ -108,7 +103,7 @@ let month = months[date.getMonth() + 1];
                 />
                 <label
                   for="personal-plan-selector"
-                  class="w-full py-4 ml-2 font-medium text-gray-900 lg:py-3"
+                  class="w-full py-4 ml-2 text-gray-900 lg:py-3"
                   ><span>Personal</span>
                 </label>
               </div>
@@ -126,7 +121,7 @@ let month = months[date.getMonth() + 1];
                 />
                 <label
                   for="enterprise-plan-selector"
-                  class="w-full py-4 ml-2 font-medium text-gray-900 lg:py-3"
+                  class="w-full py-4 ml-2 text-gray-900 lg:py-3"
                   ><span>Enterprise</span></label
                 >
               </div>
@@ -134,9 +129,7 @@ let month = months[date.getMonth() + 1];
           </ul>
 
           <div id="enterprise-name" class="w-full hidden">
-            <label
-              for="company-name"
-              class="block mb-2 font-medium text-base text-gray-900"
+            <label for="company-name" class="block mb-2 text-base text-gray-900"
               >Your Enterprise*</label
             >
             <input
@@ -149,7 +142,7 @@ let month = months[date.getMonth() + 1];
           </div>
 
           <ul
-            class="items-center w-full font-medium text-base text-gray-900 bg-white border border-gray-200 rounded-lg sm:flex"
+            class="items-center w-full text-base text-gray-900 bg-white border border-gray-200 rounded-lg sm:flex"
           >
             <li
               class="w-full border-b border-gray-200 sm:border-b-0 sm:border-r"
@@ -164,7 +157,7 @@ let month = months[date.getMonth() + 1];
                 />
                 <label
                   for="starter-plan-selector"
-                  class="w-full py-4 mx-3 font-medium text-gray-900 flex justify-between lg:py-3"
+                  class="w-full py-4 mx-3 text-gray-900 flex justify-between lg:py-3"
                   ><span>Starter</span>
                   <span class="text-gray-500"></span>
                 </label>
@@ -183,7 +176,7 @@ let month = months[date.getMonth() + 1];
                 />
                 <label
                   for="advanced-plan-selector"
-                  class="w-full py-4 mx-3 font-medium text-gray-900 flex justify-between lg:py-3"
+                  class="w-full py-4 mx-3 text-gray-900 flex justify-between lg:py-3"
                   ><span>Advanced</span>
                   <span class="text-gray-500"></span></label
                 >
@@ -202,7 +195,7 @@ let month = months[date.getMonth() + 1];
                 />
                 <label
                   for="fitness-plan-selector"
-                  class="w-full py-4 mx-3 font-medium text-gray-900 flex justify-between lg:py-3"
+                  class="w-full py-4 mx-3 text-gray-900 flex justify-between lg:py-3"
                   ><span>Fitness</span>
                   <span class="text-gray-500"></span></label
                 >
@@ -216,7 +209,7 @@ let month = months[date.getMonth() + 1];
             Aditional Classes
           </h3>
           <ul
-            class="w-full text-base font-medium text-gray-900 bg-white border border-gray-200 rounded-lg"
+            class="w-full text-base text-gray-900 bg-white border border-gray-200 rounded-lg"
           >
             {
               gymClasses.map((gymClass) => (
@@ -245,7 +238,7 @@ let month = months[date.getMonth() + 1];
           <div class="pt-12 pb-32 text-lg flex justify-end">
             <button
               type="button"
-              class="py-3 px-5 items-center w-full bg-sky-600 font-medium text-white border border-gray-200 rounded-lg flex justify-between hover:bg-sky-500 lg:w-auto lg:gap-2 lg:text-base"
+              class="py-3 px-5 font-medium items-center w-full bg-sky-700 text-white border border-gray-200 rounded-lg flex justify-between hover:bg-sky-600 lg:w-auto lg:gap-2 lg:text-base"
             >
               Start from {month} 1st
               <svg
