new folder for images

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,12 +12,6 @@ import gymClasses from "../mock/gym-classes.json";
       id="hero"
       class="flex items-center w-full lg:pt-20 text-white bg-[#04040C]"
     >
-      <video
-        autoplay
-        loop
-        muted
-        src="/video.mp4"
-        class="hidden absolute w-screen object-cover"></video>
       <div
         class="relative items-center w-full px-5 py-24 mx-auto md:px-12 lg:px-16 max-w-7xl"
       >
@@ -33,7 +27,7 @@ import gymClasses from "../mock/gym-classes.json";
                   </p>
                   <img
                     id="claw"
-                    src="/claw.webp"
+                    src="/images/claw.webp"
                     class="absolute -top-16 opacity-[.85]"
                     alt="claw image"
                   />
@@ -84,7 +78,7 @@ import gymClasses from "../mock/gym-classes.json";
                       class="flex h-12 w-12 transition-[scale] rounded-full overflow-hidden hover:scale-150 lg:hover:bg-transparent lg:border-0 lg:p-0"
                       ><img
                         class="h-full"
-                        src="/facebook-logo.svg"
+                        src="/images/facebook-logo.svg"
                         alt="facebook logo"
                       /></a
                     >
@@ -95,7 +89,7 @@ import gymClasses from "../mock/gym-classes.json";
                       class="flex h-12 w-12 transition-[scale] rounded-full overflow-hidden hover:scale-150 lg:hover:bg-transparent lg:border-0 lg:p-0"
                       ><img
                         class="h-full"
-                        src="/instagram-logo.svg"
+                        src="/images/instagram-logo.svg"
                         alt="instagram logo"
                       /></a
                     >
@@ -107,7 +101,7 @@ import gymClasses from "../mock/gym-classes.json";
               class="order-first block w-full mt-12 aspect-square lg:mt-0 lg:order-first"
             >
               <img
-                src="/main-hero.png"
+                src="/images/main-hero.png"
                 class="object-cover object-center w-full mx-auto lg:ml-auto"
                 alt="hero"
               />
@@ -528,7 +522,7 @@ import gymClasses from "../mock/gym-classes.json";
         <div class="md:flex">
           <div class="w-full grid place-items-center mb-8">
             <img
-              src="/class.webp"
+              src="/images/class.webp"
               alt="A man and a woman talking and looking a book"
               class="object-contain h-[30rem]"
             />
