font fixed in build

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,6 @@ const { title } = Astro.props;
 <style is:global>
 	@font-face {
 		font-family: "Lexend";
-		src: url("fonts/Lexend.woff2") format("woff2");
+		src: url("/fonts/Lexend.woff2") format("woff2");
 	}
 </style>
