--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
     <a href="/" class="flex items-center">
-      <img src="/logo.png" class="h-16 md:h-20 mr-3" alt="MyGYM Logo" />
+      <img src="/images/logo.png" class="h-16 md:h-20 mr-3" alt="MyGYM Logo" />
     </a>
     <button
       data-collapse-toggle="navbar-default"
