separated scripts folders

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -629,5 +629,5 @@ import gymClasses from "../mock/gym-classes.json";
   }
 </style>
 
-<script src="../scripts/planInteract.js"></script>
-<script src="../scripts/contact.js"></script>
+<script src="../scripts/index/planInteract.js"></script>
+<script src="../scripts/index/contact.js"></script>
