--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,10 @@ import CommentCard from "../components/CommentCard.astro";
 import reviews from "../mock/comments.json";
 import ClassCard from "../components/ClassCard.astro";
 import gymClasses from "../mock/gym-classes.json";
+import ArrowIcon from "../components/icons/arrow.astro";
+import FacebookIcon from "../components/icons/facebook.astro";
+import InstagramIcon from "../components/icons/instagram.astro";
+import CheckIcon from "../components/icons/check.astro";
 ---
 
 <Layout title="Welcome to MyGYM">
@@ -43,28 +47,7 @@ import gymClasses from "../mock/gym-classes.json";
                     href="/inscription"
                   >
                     <span class="mr-2">JOIN US!</span>
-                    <svg
-                      class="h-6"
-                      version="1.1"
-                      id="Capa_1"
-                      xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink"
-                      viewBox="0 0 31.143 31.143"
-                      xml:space="preserve"
-                    >
-                      <g>
-                        <g id="c100_arrow">
-                          <path
-                            fill="currentColor"
-                            d="M0,15.571c0.001,1.702,1.383,3.081,3.085,3.083l17.528-0.002l-4.738,4.739c-1.283,1.284-1.349,3.301-0.145,4.507
-			c1.205,1.201,3.222,1.138,4.507-0.146l9.896-9.898c1.287-1.283,1.352-3.301,0.146-4.506c-0.033-0.029-0.068-0.051-0.1-0.08
-			c-0.041-0.043-0.07-0.094-0.113-0.139l-9.764-9.762c-1.268-1.266-3.27-1.316-4.474-0.111c-1.205,1.205-1.153,3.208,0.111,4.476
-			l4.755,4.754H3.085C1.381,12.485,0,13.865,0,15.571z"
-                          ></path>
-                        </g>
-                        <g id="Capa_1_46_"> </g>
-                      </g>
-                    </svg>
+                    <ArrowIcon className="w-6 h-6" />
                   </a>
                 </div>
               </div>
@@ -75,23 +58,15 @@ import gymClasses from "../mock/gym-classes.json";
                   <li>
                     <a
                       href="#"
-                      class="flex h-12 w-12 transition-[scale] rounded-full overflow-hidden hover:scale-150 lg:hover:bg-transparent lg:border-0 lg:p-0"
-                      ><img
-                        class="h-full"
-                        src="/images/facebook-logo.svg"
-                        alt="facebook logo"
-                      /></a
+                      class="flex text-black bg-white transition-[scale] rounded-2xl overflow-hidden hover:scale-150"
+                      ><FacebookIcon className="w-12 h-12" /></a
                     >
                   </li>
                   <li>
                     <a
                       href="#"
-                      class="flex h-12 w-12 transition-[scale] rounded-full overflow-hidden hover:scale-150 lg:hover:bg-transparent lg:border-0 lg:p-0"
-                      ><img
-                        class="h-full"
-                        src="/images/instagram-logo.svg"
-                        alt="instagram logo"
-                      /></a
+                      class="flex text-black bg-white transition-[scale] rounded-2xl overflow-hidden hover:scale-150"
+                      ><InstagramIcon className="w-12 h-12" /></a
                     >
                   </li>
                 </ul>
@@ -143,17 +118,9 @@ import gymClasses from "../mock/gym-classes.json";
             }
           </div>
         </div>
-        <svg
-          aria-hidden="true"
-          class="flex-shrink-0 w-10 h-10 text-[#D1A133] mx-auto mb-4"
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-          ><title>Check icon</title><path
-            fill-rule="evenodd"
-            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-            clip-rule="evenodd"></path></svg
-        >
+        <CheckIcon
+          className="flex-shrink-0 w-12 h-12 text-[#D1A133] mx-auto mb-4"
+        />
         <p
           class="text-center font-semibold text-3xl text-[#04040C] mb-8 md:text-3xl md:mb-10"
         >
@@ -251,51 +218,21 @@ import gymClasses from "../mock/gym-classes.json";
             <ul role="list" class="flex-grow space-y-5 my-7">
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Access to all the equipment</span
                 >
               </li>
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Personal trainer</span
                 >
               </li>
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Unlimited sessions
                 </span>
@@ -331,68 +268,28 @@ import gymClasses from "../mock/gym-classes.json";
             <ul role="list" class="flex-grow space-y-5 my-7">
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Access to all the equipment</span
                 >
               </li>
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Personal trainer</span
                 >
               </li>
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Unlimited sessions
                 </span>
               </li>
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Orientation about nutrition
                 </span>
@@ -420,85 +317,35 @@ import gymClasses from "../mock/gym-classes.json";
             <ul role="list" class="flex-grow space-y-5 my-7">
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Access to all the equipment</span
                 >
               </li>
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Personal trainer</span
                 >
               </li>
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Unlimited sessions
                 </span>
               </li>
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Orientation about nutrition
                 </span>
               </li>
               <li class="flex space-x-3">
                 <!-- Icon -->
-                <svg
-                  aria-hidden="true"
-                  class="flex-shrink-0 w-5 h-5 text-blue-600"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                  ><title>Check icon</title><path
-                    fill-rule="evenodd"
-                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                    clip-rule="evenodd"></path></svg
-                >
+                <CheckIcon className="flex-shrink-0 w-5 h-5 text-blue-600" />
                 <span class="text-base font-normal leading-tight"
                   >Professional medical monitoring</span
                 >
@@ -603,7 +450,6 @@ import gymClasses from "../mock/gym-classes.json";
     animation: scroll 20s linear infinite;
     -webkit-animation: scroll 20s linear infinite;
   }
-
   @keyframes scroll {
     0% {
       transform: translateX(0);
@@ -614,7 +460,6 @@ import gymClasses from "../mock/gym-classes.json";
       -webkit-transform: translateX(-100rem);
     }
   }
-
   @media (min-width: 1024px) {
     @keyframes scroll {
       0% {
