--- a/src/pages/inscription.astro
+++ b/src/pages/inscription.astro
@@ -1,4 +1,5 @@
 ---
+import Arrow from "../components/icons/arrow.astro";
 import InscriptionLayout from "../layouts/InscriptionLayout.astro";
 import gymClasses from "../mock/gym-classes.json";
 
@@ -241,28 +242,7 @@ let month = months[date.getMonth() + 1];
               class="py-3 px-5 font-medium items-center w-full bg-sky-700 text-white border border-gray-200 rounded-lg flex justify-between hover:bg-sky-600 lg:w-auto lg:gap-2 lg:text-base"
             >
               Start from {month} 1st
-              <svg
-                class="h-6"
-                version="1.1"
-                id="Capa_1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="0 0 31.143 31.143"
-                xml:space="preserve"
-              >
-                <g>
-                  <g id="c100_arrow">
-                    <path
-                      fill="currentColor"
-                      d="M0,15.571c0.001,1.702,1.383,3.081,3.085,3.083l17.528-0.002l-4.738,4.739c-1.283,1.284-1.349,3.301-0.145,4.507
-			c1.205,1.201,3.222,1.138,4.507-0.146l9.896-9.898c1.287-1.283,1.352-3.301,0.146-4.506c-0.033-0.029-0.068-0.051-0.1-0.08
-			c-0.041-0.043-0.07-0.094-0.113-0.139l-9.764-9.762c-1.268-1.266-3.27-1.316-4.474-0.111c-1.205,1.205-1.153,3.208,0.111,4.476
-			l4.755,4.754H3.085C1.381,12.485,0,13.865,0,15.571z"
-                    ></path>
-                  </g>
-                  <g id="Capa_1_46_"> </g>
-                </g>
-              </svg>
+              <Arrow className="h-6" />
             </button>
           </div>
         </div>
