--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,8 +6,9 @@ import MenuIcon from "./icons/menu-icon.astro";
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
-    <a href="/" class="flex items-center">
-      <img src="/images/logo.png" class="h-16 md:h-20 mr-3" alt="MyGYM Logo" />
+    <a href="/" class="flex items-center text-white text-3xl tracking-tight">
+      <img src="/images/favicon.svg" class="h-16 md:h-20" alt="MyGYM Logo" />
+      MYGYM
     </a>
     <button
       data-collapse-toggle="navbar-default"
