--- a/src/layouts/InscriptionLayout.astro
+++ b/src/layouts/InscriptionLayout.astro
@@ -8,7 +8,7 @@ import Arrow from "../components/icons/arrow.astro";
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/images/favicon.png" />
+		<link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<link
 			rel="preload"
