--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,9 @@
 import MenuIcon from "./icons/menu-icon.astro";
 ---
 
-<nav class="fixed w-full text-gray-400 z-50 bg-[#04040C]">
+<nav
+  class="fixed w-full text-gray-400 z-50 bg-[#04040C] border-b-2 border-gray-800"
+>
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
@@ -19,54 +21,54 @@ import MenuIcon from "./icons/menu-icon.astro";
     >
       <span class="sr-only">Open main menu</span>
       <MenuIcon className="w-8 h-8" />
-      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <ul
-          class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-10 md:mt-0"
-        >
-          <li>
-            <a
-              href="/#hero"
-              class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
-              aria-current="page">Home</a
-            >
-          </li>
-          <li>
-            <a
-              href="/about"
-              class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
-              aria-current="page">About us</a
-            >
-          </li>
-          <li>
-            <a
-              href="/#reviews"
-              class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
-              >Reviews</a
-            >
-          </li>
-          <li>
-            <a
-              href="/#classes"
-              class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
-              >Classes</a
-            >
-          </li>
-          <li>
-            <a
-              href="/#plans"
-              class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
-              >Plans</a
-            >
-          </li>
-          <li>
-            <a
-              href="/#contact"
-              class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
-              >Contact</a
-            >
-          </li>
-        </ul>
-      </div>
     </button>
+    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <ul
+        class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-10 md:mt-0"
+      >
+        <li>
+          <a
+            href="/#hero"
+            class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
+            aria-current="page">Home</a
+          >
+        </li>
+        <li>
+          <a
+            href="/about"
+            class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
+            aria-current="page">About us</a
+          >
+        </li>
+        <li>
+          <a
+            href="/#reviews"
+            class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
+            >Reviews</a
+          >
+        </li>
+        <li>
+          <a
+            href="/#classes"
+            class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
+            >Classes</a
+          >
+        </li>
+        <li>
+          <a
+            href="/#plans"
+            class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
+            >Plans</a
+          >
+        </li>
+        <li>
+          <a
+            href="/#contact"
+            class="block py-2 pl-3 pr-4 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-[#D6A22C] md:p-0"
+            >Contact</a
+          >
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
