--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,14 +3,12 @@ import MenuIcon from "./icons/menu-icon.astro";
 ---
 
 <nav
-  class="fixed w-full text-gray-400 z-50 bg-[#04040C] border-b-2 border-gray-800"
+  class="fixed w-full px-12 py-3 text-gray-400 z-50 bg-[#04040C] border-b-2 border-gray-800"
 >
-  <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
-  >
+  <div class="max-w-7xl flex flex-wrap items-center justify-between mx-auto">
     <a href="/" class="flex items-center text-white text-3xl tracking-tight">
       <img src="/images/favicon.svg" class="h-16 md:h-20" alt="MyGYM Logo" />
-      MYGYM
+      <span class="hidden lg:block">MYGYM</span>
     </a>
     <button
       data-collapse-toggle="navbar-default"
