--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,15 +14,13 @@ import CheckIcon from "../components/icons/check.astro";
   <main>
     <section
       id="hero"
-      class="flex items-center w-full lg:pt-20 text-white bg-[#04040C]"
+      class="flex items-center w-full px-12 py-16 md:py-32 md:pb-4 text-white bg-[#04040C]"
     >
-      <div
-        class="relative items-center w-full px-5 py-24 mx-auto md:px-12 lg:px-16 max-w-7xl"
-      >
+      <div class="relative items-center w-full mx-auto max-w-7xl">
         <div class="relative flex-col items-start m-auto align-middle">
-          <div class="grid grid-cols-1 gap-6 lg:grid-cols-2 lg:gap-24">
-            <div class="relative items-center gap-12 m-auto lg:inline-flex">
-              <div class="max-w-xl text-center lg:text-left">
+          <div class="grid grid-cols-1 gap-6 md:grid-cols-2 md:gap-24">
+            <div class="relative items-center gap-12 m-auto md:inline-flex">
+              <div class="max-w-xl text-center md:text-left">
                 <div>
                   <p
                     class="text-base text-gray-300 font-medium relative z-10 tracking-tight sm:text-lg"
@@ -36,12 +34,12 @@ import CheckIcon from "../components/icons/check.astro";
                     alt="claw image"
                   />
                   <p
-                    class="text-5xl font-bold relative z-10 mt-4 tracking-tight sm:text-5xl"
+                    class="text-4xl font-bold relative z-10 mt-4 tracking-tight lg:text-5xl"
                   >
                     LET'S GET A FIT AND<br />PERFECT BODY
                   </p>
                 </div>
-                <div class="flex justify-center gap-3 mt-20 lg:justify-start">
+                <div class="flex justify-center gap-3 mt-20 md:justify-start">
                   <a
                     class="inline-flex items-center justify-center text-white text-lg font-semibold relative z-10 rounded-md px-6 py-2 bg-[#D1A133] hover:bg-yellow-300 focus:outline-none focus-visible:outline-gray-600"
                     href="/inscription"
@@ -53,7 +51,7 @@ import CheckIcon from "../components/icons/check.astro";
               </div>
               <div class="relative z-10">
                 <ul
-                  class="flex flex-row gap-6 justify-center mt-8 lg:p-0 lg:flex-col lg:gap-4"
+                  class="flex flex-row gap-6 justify-center mt-8 md:p-0 md:flex-col md:gap-4"
                 >
                   <li>
                     <a
@@ -72,12 +70,10 @@ import CheckIcon from "../components/icons/check.astro";
                 </ul>
               </div>
             </div>
-            <div
-              class="order-first block w-full mt-12 aspect-square lg:mt-0 lg:order-first"
-            >
+            <div class="order-first block w-full my-12 md:mt-0">
               <img
                 src="/images/main-hero.png"
-                class="object-cover object-center w-full mx-auto lg:ml-auto"
+                class="w-full mx-auto md:ml-auto"
                 alt="hero"
               />
             </div>
