--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -29,7 +29,7 @@ import Layout from "../layouts/Layout.astro";
         <div>
           <img
             class="m-auto"
-            src="/images/owners.jpg"
+            src="/images/owners.webp"
             alt="Robert and Claire looking each other, MyGym owners"
           />
           <p class="text-center italic">
@@ -68,17 +68,17 @@ import Layout from "../layouts/Layout.astro";
           class="flex flex-col gap-8 [&>div]:text-center [&>div>img]:rounded-full [&>div>img]:w-52 [&>div>img]:aspect-square [&>div>img]:object-cover [&>div>img]:m-auto md:flex-row md:justify-center"
         >
           <div>
-            <img src="/images/woman-trainer-1.jpg" alt="" />
+            <img src="/images/woman-trainer-1.svg" alt="" />
             <p class="font-semibold text-xl">Mariem Neuer</p>
             <p>Personal trainer</p>
           </div>
           <div>
-            <img src="/images/man-trainer-3.jpg" alt="" />
+            <img src="/images/man-trainer-3.svg" alt="" />
             <p class="font-semibold text-xl">Chris Dawson</p>
             <p>Personal trainer</p>
           </div>
           <div>
-            <img src="/images/man-trainer-1.jpg" alt="" />
+            <img src="/images/man-trainer-1.svg" alt="" />
             <p class="font-semibold text-xl">Nick Fury</p>
             <p>Zumba & Crossfit teacher</p>
           </div>
@@ -100,7 +100,7 @@ import Layout from "../layouts/Layout.astro";
         <div>
           <img
             class="m-auto"
-            src="/images/kid-gym.jpg"
+            src="/images/kid-gym.webp"
             alt="Robert and Claire looking each other, MyGym owners"
           />
         </div>
