card letter size for mobile

--- a/src/components/ClassCard.astro
+++ b/src/components/ClassCard.astro
@@ -13,12 +13,12 @@ const { name, img } = Astro.props;
     </div>
     <div class="absolute">
       <p
-        class="absolute bg-gradient-to-r from-black to-transparent bottom-4 py-2 px-10 sm:px-12"
+        class="absolute text-sm bg-gradient-to-r from-black to-transparent bottom-4 py-2 px-4 sm:px-12"
       >
         JOIN
       </p>
     </div>
-    <div class="h-1/6 flex items-center justify-center">
+    <div class="h-1/6 flex text-sm sm:text-lg items-center justify-center">
       <p>{name}</p>
     </div>
   </div>
