--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,7 +143,7 @@ import CheckIcon from "../components/icons/check.astro";
           THERE ARE CLASSES FOR EVERYONE!
         </p>
         <div
-          class="grid grid-cols-2 gap-6 place-items-center mb-10 md:text-lg md:grid-cols-3"
+          class="grid grid-cols-2 gap-3 place-items-center mb-10 md:text-lg md:grid-cols-3 md:gap-6"
         >
           {
             gymClasses.map((gymClass) => (
