form image size adjusted

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -359,7 +359,7 @@ import CheckIcon from "../components/icons/check.astro";
 
     <section id="contact" class="px-12 py-24 md:pt-24 md:pb-0">
       <div class="max-w-7xl text-[#04040C] m-auto">
-        <p class="text-center font-semibold text-3xl mb-8 md:text-5xl md:mb-14">
+        <p class="text-center font-semibold text-2xl mb-8 md:text-5xl md:mb-14">
           IF YOU NEED MORE INFORMATION WE WILL CONTACT YOU!
         </p>
         <div class="md:flex">
@@ -367,7 +367,7 @@ import CheckIcon from "../components/icons/check.astro";
             <img
               src="/images/class.webp"
               alt="A man and a woman talking and looking a book"
-              class="object-contain h-[30rem]"
+              class="max-h-96 md:h-[30rem]"
             />
           </div>
           <div class="w-full grid place-items-center">
