--- a/src/pages/inscription.astro
+++ b/src/pages/inscription.astro
@@ -141,7 +141,9 @@ let month = months[date.getMonth() + 1];
               required
             />
           </div>
-
+          <h3 class="mb-4 font-semibold text-2xl text-gray-900 lg:text-xl">
+            Choose your level
+          </h3>
           <ul
             class="items-center w-full text-base text-gray-900 bg-white border border-gray-200 rounded-lg sm:flex"
           >
